// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataThemeIcon renders in avatar mode 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular css-avgvop-MuiAvatar-root"
  data-selenium="data-theme-icon.landuse"
  style={
    {
      "height": "40px",
      "width": "40px",
    }
  }
  title="Land Cover & Processes"
>
  <img
    alt="Land Cover & Processes"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="svg-file.svg"
  />
</div>
`;

exports[`DataThemeIcon renders with a custom className 1`] = `
<img
  alt="Organisms, Populations, and Communities"
  className="foo"
  data-selenium="data-theme-icon.organisms"
  height="40px"
  src="svg-file.svg"
  title="Organisms, Populations, and Communities"
  width="40px"
/>
`;

exports[`DataThemeIcon renders with custom size 1`] = `
<img
  alt="Ecohydrology"
  className={null}
  data-selenium="data-theme-icon.ecohydrology"
  height="32px"
  src="svg-file.svg"
  title="Ecohydrology"
  width="32px"
/>
`;

exports[`DataThemeIcon renders with only a theme prop 1`] = `
<img
  alt="Atmosphere"
  className={null}
  data-selenium="data-theme-icon.atmosphere"
  height="40px"
  src="svg-file.svg"
  title="Atmosphere"
  width="40px"
/>
`;

exports[`DataThemeIcon renders with only a theme prop alias 1`] = `
<img
  alt="Biogeochemistry"
  className={null}
  data-selenium="data-theme-icon.biogeo"
  height="40px"
  src="svg-file.svg"
  title="Biogeochemistry"
  width="40px"
/>
`;
